# kbreakout

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  DESIGN  TODO  ball.cpp  ball.h  brick.cpp  brick.h  canvasitems.cpp  canvasitems.h  canvaswidget.cpp  canvaswidget.h  consts.h  fontutils.h  gameengine.cpp  gameengine.h  gift.cpp  gift.h  globals.h  item.cpp  item.h  kbreakout.categories  kbreakout.desktop  kbreakout.kcfg  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.kbreakout.appdata.xml  org.kde.kbreakout.desktop  renderer.cpp  snapcraft.yaml  textitems.cpp  textitems.h
cmake/: InternalMacros.cmake
doc/: CMakeLists.txt  index.docbook
levelsets/: CMakeLists.txt  default.desktop  default.levelset
pics/: CMakeLists.txt
po/ar/: kbreakout.po
po/ar/docs/kbreakout/: index.docbook
po/ast/: kbreakout.po
po/bg/: kbreakout.po
po/bs/: kbreakout.po
po/ca/: kbreakout.po
po/ca/docs/kbreakout/: index.docbook
po/ca@valencia/: kbreakout.po
po/cs/: kbreakout.po
po/da/: kbreakout.po
po/de/: kbreakout.po
po/de/docs/kbreakout/: index.docbook
po/el/: kbreakout.po
po/en_GB/: kbreakout.po
po/eo/: kbreakout.po
po/es/: kbreakout.po
po/es/docs/kbreakout/: index.docbook
po/et/: kbreakout.po
po/et/docs/kbreakout/: index.docbook
po/eu/: kbreakout.po
po/fi/: kbreakout.po
po/fr/: kbreakout.po
po/fr/docs/kbreakout/: index.docbook
po/ga/: kbreakout.po
po/gl/: kbreakout.po
po/gu/: kbreakout.po
po/he/: kbreakout.po
po/hi/: kbreakout.po
po/hr/: kbreakout.po
po/hu/: kbreakout.po
po/ia/: kbreakout.po
po/id/: kbreakout.po
po/is/: kbreakout.po
po/it/: kbreakout.po
po/it/docs/kbreakout/: index.docbook
po/ja/: kbreakout.po
po/ka/: kbreakout.po
po/kk/: kbreakout.po
po/km/: kbreakout.po
po/ko/: kbreakout.po
po/lt/: kbreakout.po
po/lv/: kbreakout.po
po/mai/: kbreakout.po
po/ml/: kbreakout.po
po/mr/: kbreakout.po
po/nb/: kbreakout.po
po/nds/: kbreakout.po
po/nl/: kbreakout.po
po/nl/docs/kbreakout/: index.docbook
po/nn/: kbreakout.po
po/pl/: kbreakout.po
po/pl/docs/kbreakout/: index.docbook
po/pt/: kbreakout.po
po/pt/docs/kbreakout/: index.docbook
po/pt_BR/: kbreakout.po
po/pt_BR/docs/kbreakout/: index.docbook
po/ro/: kbreakout.po
po/ru/: kbreakout.po
po/sa/: kbreakout.po
po/sk/: kbreakout.po
po/sl/: kbreakout.po
po/sl/docs/kbreakout/: index.docbook
po/sq/: kbreakout.po
po/sr/: kbreakout.po
po/sr@ijekavian/: kbreakout.po
po/sr@ijekavianlatin/: kbreakout.po
po/sr@latin/: kbreakout.po
po/sv/: kbreakout.po
po/sv/docs/kbreakout/: index.docbook
po/th/: kbreakout.po
po/tr/: kbreakout.po
po/ug/: kbreakout.po
po/uk/: kbreakout.po
po/uk/docs/kbreakout/: index.docbook
po/wa/: kbreakout.po
po/zh_CN/: kbreakout.po
po/zh_TW/: kbreakout.po
src/: CMakeLists.txt  Messages.sh  ball.cpp  ball.h  brick.cpp  brick.h  canvasitem.cpp  canvasitem.h  canvasitems.cpp  canvasitems.h  canvaswidget.cpp  canvaswidget.h  fontutils.cpp  fontutils.h  gameengine.cpp  gameengine.h  generalsettings.ui  gift.cpp  gift.h  globals.h  item.cpp  item.h  kbreakout.kcfg  kbreakout.qrc  kbreakout_debug.cpp  kbreakout_debug.h  kbreakoutui.rc  kgdeclarativeview.cpp  kgdeclarativeview.h  levelloader.cpp  levelloader.h  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.kbreakout.appdata.xml  org.kde.kbreakout.desktop  renderer.cpp  renderer.h  settings.kcfgc  svgitem.cpp  (+5 more)
src/declarativeimports/: canvasitem.cpp  canvasitem.h  corebindingsplugin.cpp  corebindingsplugin.h
src/qml/: Ball.qml  Bar.qml  Brick.qml  CanvasItem.qml  Gift.qml  Singleshot.qml  TextItem.qml  globals.js  logic.js  main.qml
src/svgplugin/: CMakeLists.txt  qmldir  svgitem.cpp  svgitem.h  svgitemplugin.cpp  svgitemplugin.h
themes/: CMakeLists.txt  IceWorld.desktop  IceWorld.svgz  alienbreakout.desktop  alienbreakout.svgz  crystal.desktop  crystal.svgz  default.desktop  default.svgz  default_old.desktop  egyptian_desert_test.desktop  egyptian_desert_test.svgz  egyptianbreakout.desktop  egyptianbreakout.svgz  simple.desktop  simple.svgz  web20.desktop  web20.svgz
