install( FILES default.desktop egyptian_breakout_preview.png egyptianbreakout.svgz alienbreakout.svgz alienbreakout.desktop alien_preview.png web20.svgz web20.desktop web20_preview.png crystal.desktop crystal.svgz crystal_preview.png simple.svgz simple.desktop simple_preview.png IceWorld.svgz IceWorld.desktop IceWorld_preview.png DESTINATION  ${DATA_INSTALL_DIR}/kbreakout/themes )
